# MiMA

./: CMakeLists.txt  README.md  input_ad.nml  input_fp_pt.nml  input_fp_tf.nml  input_pt.nml  input_tf.nml  submit_AD99.icelake  submit_FP_PT.icelake  submit_FP_TF.icelake  submit_PT.icelake  submit_TF.icelake  submit_rel_FP_PT.icelake  submit_rel_FP_TF.icelake  submit_rel_PT.icelake  submit_rel_TF.icelake
exp/: compilescript_SH03_CEES_lmansfield.sh  run033.sh  runscript_SH03_CEES_lmansfield.sh
input/: diag_table  input.nml
input/RESTART/: atmos_coupled.res.nc  coupler.res  simple_surface.res.nc  spectral_physics.res.nc
src/atmos_param/cg_drag/: cg_drag.f90  forpy.f90  forpy_mod.f90  null.f90  pytorch.f90  tensorflow.f90
src/atmos_param/damping_driver/: damping_driver.f90
src/atmos_param/physics_driver/: physics_driver.f90
src/coupler/: simple_surface.f90
src/shared/pytorch/: arch_DaveNet.py  arch_davenet.py  pt2ts.py  run_emulator_DaveNet.py  run_emulator_davenet.py  test_coupling.py
src/shared/tensorflow/: README.md  construct-tf-davenet.py  requirements.txt  run_tensorflow.py  test_py_tf_davenet.py
